強制ミュート及び、MutedSceneの削除
